update zone icons and radius

--- a/climate.yaml
+++ b/climate.yaml
@@ -1,38 +1,38 @@
-- platform: mqtt
+- modes:
+  - 'off'
+  - heat
+  - cool
+  - auto
   name: Thermostat Heat
+  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  fan_modes:
+  - auto
+  - 'on'
+  temperature_state_topic: smartthings/Thermostat/heatingSetpoint
   unique_id: thermostat_heat
   current_temperature_topic: smartthings/Thermostat/temperature
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  platform: mqtt
   mode_command_topic: smartthings/Thermostat/thermostatMode
   mode_state_topic: smartthings/Thermostat/thermostatMode
-  modes:
+  temperature_command_topic: smartthings/Thermostat/heatingSetpoint
+  temp_step: 0.5
+- modes:
   - 'off'
   - heat
   - cool
   - auto
+  name: Thermostat Cool
   fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
   fan_modes:
   - auto
   - 'on'
-  temperature_command_topic: smartthings/Thermostat/heatingSetpoint
-  temperature_state_topic: smartthings/Thermostat/heatingSetpoint
-  temp_step: 0.5
-- platform: mqtt
-  name: Thermostat Cool
+  temperature_state_topic: smartthings/Thermostat/coolingSetpoint
   unique_id: thermostat_cool
   current_temperature_topic: smartthings/Thermostat/temperature
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  platform: mqtt
   mode_command_topic: smartthings/Thermostat/thermostatMode
   mode_state_topic: smartthings/Thermostat/thermostatMode
-  modes:
-  - 'off'
-  - heat
-  - cool
-  - auto
-  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
-  fan_modes:
-  - auto
-  - 'on'
   temperature_command_topic: smartthings/Thermostat/coolingSetpoint
-  temperature_state_topic: smartthings/Thermostat/coolingSetpoint
   temp_step: 0.5
