--- a/binary_sensor.yaml
+++ b/binary_sensor.yaml
@@ -1,35 +1,35 @@
-- state_topic: smartthings/Living Room Sensor/motion
-  payload_off: inactive
-  platform: mqtt
-  device_class: motion
-  unique_id: living_room_sensor_motion
-  payload_on: active
+- platform: mqtt
   name: Living Room Motion
-- state_topic: smartthings/Master Bedroom Sensor/motion
-  payload_off: inactive
-  platform: mqtt
+  unique_id: living_room_sensor_motion
   device_class: motion
-  unique_id: master_bedroom_sensor_motion
+  state_topic: smartthings/Living Room Sensor/motion
   payload_on: active
+  payload_off: inactive
+- platform: mqtt
   name: Bedroom Motion
-- state_topic: smartthings/Front Door Lock/smoke
-  payload_off: clear
-  platform: mqtt
-  device_class: smoke
-  unique_id: front_door_lock_smoke
-  payload_on: detected
+  unique_id: master_bedroom_sensor_motion
+  device_class: motion
+  state_topic: smartthings/Master Bedroom Sensor/motion
+  payload_on: active
+  payload_off: inactive
+- platform: mqtt
   name: Front Door Smoke
-- state_topic: smartthings/Raman/presence
-  payload_off: not present
-  platform: mqtt
-  device_class: presence
-  unique_id: raman_home
-  payload_on: present
+  unique_id: front_door_lock_smoke
+  device_class: smoke
+  state_topic: smartthings/Front Door Lock/smoke
+  payload_on: detected
+  payload_off: clear
+- platform: mqtt
   name: Raman Home Presence
-- state_topic: smartthings/Sherene/presence
-  payload_off: not present
-  platform: mqtt
+  unique_id: raman_home
   device_class: presence
-  unique_id: sherene_home
+  state_topic: smartthings/Raman/presence
   payload_on: present
+  payload_off: not present
+- platform: mqtt
   name: Sherene Home Presence
+  unique_id: sherene_home
+  device_class: presence
+  state_topic: smartthings/Sherene/presence
+  payload_on: present
+  payload_off: not present
