--- a/person.yaml
+++ b/person.yaml
@@ -1,9 +1,9 @@
-- device_trackers:
-  - device_tracker.ramansiphone
-  name: Raman
-  user_id: !secret 'user_id_raman'
+- name: Raman
   id: raman
-- device_trackers:
-  - device_tracker.sherenesiphone
-  name: Sherene
+  user_id: !secret 'user_id_raman'
+  device_trackers:
+  - device_tracker.ramansiphone
+- name: Sherene
   id: sherene
+  device_trackers:
+  - device_tracker.sherenesiphone
