--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,4 +1,17 @@
-- monitored_conditions:
+- platform: darksky
+  api_key: !secret 'api_darksky'
+  forecast:
+  - 0
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
+  scan_interval:
+    minutes: 15
+  monitored_conditions:
   - icon
   - precip_type
   - precip_intensity
@@ -17,25 +30,12 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
-  platform: darksky
-  scan_interval:
-    minutes: 15
-  forecast:
-  - 0
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
-  api_key: !secret 'api_darksky'
 - platform: plex
-  host: !secret 'host_living_room_shield'
-  username: !secret 'user_plex'
   name: Plex Media Server
   server: home
+  host: !secret 'host_living_room_shield'
   token: !secret 'token_plex'
+  username: !secret 'user_plex'
   password: !secret 'pass_plex'
 - platform: kodi_recently_added
   host: !secret 'host_nas'
@@ -45,31 +45,34 @@
 - platform: sonarr_upcoming_media
   host: !secret 'host_nas'
   api_key: !secret 'api_sonarr'
-- realtime: true
-  platform: waze_travel_time
+- platform: waze_travel_time
   name: Raman Work Commute
+  origin: !secret 'address_home'
   destination: !secret 'address_work_raman'
   region: US
-  origin: !secret 'address_home'
-- realtime: true
-  platform: waze_travel_time
+  realtime: true
+- platform: waze_travel_time
   name: Raman Home Commute
+  origin: !secret 'address_work_raman'
   destination: !secret 'address_home'
   region: US
-  origin: !secret 'address_work_raman'
-- realtime: true
-  platform: waze_travel_time
+  realtime: true
+- platform: waze_travel_time
   name: Sherene Work Commute
+  origin: !secret 'address_home'
   destination: !secret 'address_work_sherene'
   region: US
-  origin: !secret 'address_home'
-- realtime: true
-  platform: waze_travel_time
+  realtime: true
+- platform: waze_travel_time
   name: Sherene Home Commute
+  origin: !secret 'address_work_sherene'
   destination: !secret 'address_home'
   region: US
-  origin: !secret 'address_work_sherene'
-- monitored_conditions:
+  realtime: true
+- platform: pi_hole
+  name: Pi-Hole
+  host: !secret 'host_pihole'
+  monitored_conditions:
   - ads_blocked_today
   - ads_percentage_today
   - dns_queries_today
@@ -79,66 +82,63 @@
   - unique_clients
   - unique_domains
   - clients_ever_seen
-  platform: pi_hole
-  host: !secret 'host_pihole'
-  name: Pi-Hole
-- state_topic: smartthings/Front Door Lock/battery
-  platform: mqtt
-  device_class: battery
+- platform: mqtt
+  name: Front Door Lock Battery
   unique_id: front_door_lock_battery
   unit_of_measurement: '%'
-  name: Front Door Lock Battery
-- state_topic: smartthings/Living Room Sensor/battery
-  platform: mqtt
   device_class: battery
+  state_topic: smartthings/Front Door Lock/battery
+- platform: mqtt
+  name: Living Room Sensor Battery
   unique_id: living_room_sensor_battery
   unit_of_measurement: '%'
-  name: Living Room Sensor Battery
-- state_topic: smartthings/Master Bedroom Sensor/battery
-  platform: mqtt
   device_class: battery
+  state_topic: smartthings/Living Room Sensor/battery
+- platform: mqtt
+  name: Master Bedroom Sensor Battery
   unique_id: master_bedroom_sensor_battery
   unit_of_measurement: '%'
-  name: Master Bedroom Sensor Battery
-- state_topic: smartthings/Thermostat/humidity
-  platform: mqtt
-  device_class: humidity
+  device_class: battery
+  state_topic: smartthings/Master Bedroom Sensor/battery
+- platform: mqtt
+  name: Thermostat Humidity
   unique_id: thermostat_humidity
   unit_of_measurement: '%'
-  name: Thermostat Humidity
-- state_topic: smartthings/Living Room Sensor/humidity
-  platform: mqtt
   device_class: humidity
+  state_topic: smartthings/Thermostat/humidity
+- platform: mqtt
+  name: Living Room Humidity
   unique_id: living_room_sensor_humidity
   unit_of_measurement: '%'
-  name: Living Room Humidity
-- state_topic: smartthings/Master Bedroom Sensor/humidity
-  platform: mqtt
   device_class: humidity
+  state_topic: smartthings/Living Room Sensor/humidity
+- platform: mqtt
+  name: Master Bedroom Humidity
   unique_id: master_bedroom_sensor_humidity
   unit_of_measurement: '%'
-  name: Master Bedroom Humidity
-- state_topic: smartthings/Living Room Sensor/temperature
-  platform: mqtt
-  device_class: temperature
+  device_class: humidity
+  state_topic: smartthings/Master Bedroom Sensor/humidity
+- platform: mqtt
+  name: Living Room Temperature
   unique_id: living_room_sensor_temperature
   unit_of_measurement: "\xB0F"
-  name: Living Room Temperature
-- state_topic: smartthings/Master Bedroom Sensor/temperature
-  platform: mqtt
   device_class: temperature
+  state_topic: smartthings/Living Room Sensor/temperature
+- platform: mqtt
+  name: Master Bedroom Temperature
   unique_id: master_bedroom_sensor_temperature
   unit_of_measurement: "\xB0F"
-  name: Master Bedroom Temperature
-- state_topic: smartthings/Living Room Sensor/illuminance
-  platform: mqtt
-  device_class: illuminance
+  device_class: temperature
+  state_topic: smartthings/Master Bedroom Sensor/temperature
+- platform: mqtt
+  name: Living Room Illuminance
   unique_id: living_room_sensor_illuminance
   unit_of_measurement: lm
-  name: Living Room Illuminance
-- state_topic: smartthings/Master Bedroom Sensor/illuminance
-  platform: mqtt
   device_class: illuminance
+  state_topic: smartthings/Living Room Sensor/illuminance
+- platform: mqtt
+  name: Master Bedroom Illuminance
   unique_id: master_bedroom_sensor_illuminance
   unit_of_measurement: lm
-  name: Master Bedroom Illuminance
+  device_class: illuminance
+  state_topic: smartthings/Master Bedroom Sensor/illuminance
