--- a/zones.yaml
+++ b/zones.yaml
@@ -1,16 +1,16 @@
-- name: Home
+- icon: mdi:home
   latitude: !secret 'lat_home'
-  longitude: !secret 'long_home'
   elevation: !secret 'elevation_home'
+  longitude: !secret 'long_home'
+  name: Home
   radius: 25
-  icon: mdi:home
-- name: Raman Work
+- icon: mdi:worker
   latitude: !secret 'lat_work_raman'
+  name: Raman Work
   longitude: !secret 'long_work_raman'
   radius: 150
-  icon: mdi:worker
-- name: Sherene Work
+- icon: mdi:worker
   latitude: !secret 'lat_work_sherene'
+  name: Sherene Work
   longitude: !secret 'long_work_sherene'
   radius: 100
-  icon: mdi:worker
