--- a/climate.yaml
+++ b/climate.yaml
@@ -1,21 +1,21 @@
-- platform: mqtt
+- unique_id: thermostat
+  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
+  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
   name: Thermostat
-  unique_id: thermostat
+  temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
   current_temperature_topic: smartthings/Thermostat/temperature
-  mode_command_topic: smartthings/Thermostat/thermostatMode
+  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
   mode_state_topic: smartthings/Thermostat/thermostatMode
+  mode_command_topic: smartthings/Thermostat/thermostatMode
+  temp_step: 0.5
   modes:
   - 'off'
   - heat
   - cool
   - auto
-  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  platform: mqtt
   fan_modes:
   - auto
   - 'on'
-  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
-  temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
-  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
-  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
-  temp_step: 0.5
