--- a/light.yaml
+++ b/light.yaml
@@ -1,11 +1,11 @@
-- unique_id: living_room_light
-  payload_on: 'on'
-  name: Living Room Light
-  retain: true
-  command_topic: smartthings/Living Room Light/switch
-  state_topic: smartthings/Living Room Light/switch
-  brightness_command_topic: smartthings/Living Room Light/level
-  payload_off: 'off'
+- brightness_state_topic: smartthings/Living Room Light/level
+  unique_id: living_room_light
   platform: mqtt
-  brightness_state_topic: smartthings/Living Room Light/level
   brightness_scale: 100
+  name: Living Room Light
+  brightness_command_topic: smartthings/Living Room Light/level
+  payload_on: 'on'
+  retain: true
+  state_topic: smartthings/Living Room Light/switch
+  command_topic: smartthings/Living Room Light/switch
+  payload_off: 'off'
