--- a/climate.yaml
+++ b/climate.yaml
@@ -1,21 +1,21 @@
-- unique_id: thermostat
-  platform: mqtt
-  mode_state_topic: smartthings/Thermostat/thermostatMode
-  name: Thermostat
+- current_temperature_topic: smartthings/Thermostat/temperature
   mode_command_topic: smartthings/Thermostat/thermostatMode
-  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
-  temp_step: 0.5
-  current_temperature_topic: smartthings/Thermostat/temperature
-  temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
-  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
   modes:
   - 'off'
   - heat
   - cool
   - auto
+  mode_state_topic: smartthings/Thermostat/thermostatMode
+  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
+  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
+  temp_step: 0.5
   fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
   fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  name: Thermostat
   fan_modes:
   - auto
   - 'on'
-  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
+  temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
+  unique_id: thermostat
+  platform: mqtt
+  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
