--- a/automations.yaml
+++ b/automations.yaml
@@ -1,23 +1,23 @@
-- trigger:
+- alias: IFTTT Vacuum Control
+  id: ifttt_vacuum_control
+  trigger:
     webhook_id: !secret 'webhook_vacuum'
     platform: webhook
-  alias: IFTTT Vacuum Control
+  initial_state: true
   action:
-    service: rest_command.ir_send
     data_template:
       blaster: '{{ trigger.json.blaster }}'
       target: '{{ trigger.json.target }}'
       command: '{{ trigger.json.command }}'
-  initial_state: true
-  id: ifttt_vacuum_control
-- trigger:
+    service: rest_command.ir_send
+- alias: Update Available Notifications
+  id: notify_updates
+  trigger:
     entity_id: binary_sensor.updater
     platform: state
-  alias: Update Available Notifications
   action:
-    service: notify.slack
     data:
       message: Update for Home Assistant is available.{{ '\n' }}{{ '\n' }}Potential
         Breaking Changes:{{ '\n' }}```{{ states("sensor.potential_breaking_changes")
         }}```
-  id: notify_updates
+    service: notify.slack
