--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,17 +1,4 @@
-- api_key: !secret 'api_darksky'
-  platform: darksky
-  forecast:
-  - 0
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
-  scan_interval:
-    minutes: 15
-  monitored_conditions:
+- monitored_conditions:
   - icon
   - precip_type
   - precip_intensity
@@ -30,46 +17,60 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
-- host: !secret 'host_living_room_shield'
+  forecast:
+  - 0
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
+  api_key: !secret 'api_darksky'
+  platform: darksky
+  scan_interval:
+    minutes: 15
+- server: home
   platform: plex
-  username: !secret 'user_plex'
-  name: Plex Media Server
   token: !secret 'token_plex'
+  host: !secret 'host_living_room_shield'
+  username: !secret 'user_plex'
   password: !secret 'pass_plex'
-  server: home
+  name: Plex Media Server
 - host: !secret 'host_nas'
   platform: kodi_recently_added
-- api_key: !secret 'api_radarr'
-  host: !secret 'host_nas'
+- host: !secret 'host_nas'
+  api_key: !secret 'api_radarr'
   platform: radarr_upcoming_media
-- api_key: !secret 'api_sonarr'
-  host: !secret 'host_nas'
+- host: !secret 'host_nas'
+  api_key: !secret 'api_sonarr'
   platform: sonarr_upcoming_media
-- platform: waze_travel_time
-  origin: !secret 'address_home'
-  realtime: true
-  name: Raman Work Commute
+- realtime: true
+  platform: waze_travel_time
   destination: !secret 'address_work_raman'
-  region: US
-- platform: waze_travel_time
-  origin: !secret 'address_work_raman'
-  realtime: true
-  name: Raman Home Commute
-  destination: !secret 'address_home'
-  region: US
-- platform: waze_travel_time
   origin: !secret 'address_home'
-  realtime: true
-  name: Sherene Work Commute
-  destination: !secret 'address_work_sherene'
   region: US
-- platform: waze_travel_time
-  origin: !secret 'address_work_sherene'
-  realtime: true
-  name: Sherene Home Commute
+  name: Raman Work Commute
+- realtime: true
+  platform: waze_travel_time
   destination: !secret 'address_home'
+  origin: !secret 'address_work_raman'
   region: US
+  name: Raman Home Commute
+- realtime: true
+  platform: waze_travel_time
+  destination: !secret 'address_work_sherene'
+  origin: !secret 'address_home'
+  region: US
+  name: Sherene Work Commute
+- realtime: true
+  platform: waze_travel_time
+  destination: !secret 'address_home'
+  origin: !secret 'address_work_sherene'
+  region: US
+  name: Sherene Home Commute
 - host: !secret 'host_pihole'
+  name: Pi-Hole
   platform: pi_hole
   monitored_conditions:
   - ads_blocked_today
@@ -81,64 +82,63 @@
   - unique_clients
   - unique_domains
   - clients_ever_seen
-  name: Pi-Hole
-- unique_id: front_door_lock_battery
+- state_topic: smartthings/Front Door Lock/battery
   platform: mqtt
+  unit_of_measurement: '%'
+  device_class: battery
+  unique_id: front_door_lock_battery
   name: Front Door Lock Battery
+- state_topic: smartthings/Living Room Sensor/battery
+  platform: mqtt
   unit_of_measurement: '%'
   device_class: battery
-  state_topic: smartthings/Front Door Lock/battery
-- unique_id: living_room_sensor_battery
-  platform: mqtt
+  unique_id: living_room_sensor_battery
   name: Living Room Sensor Battery
+- state_topic: smartthings/Master Bedroom Sensor/battery
+  platform: mqtt
   unit_of_measurement: '%'
   device_class: battery
-  state_topic: smartthings/Living Room Sensor/battery
-- unique_id: master_bedroom_sensor_battery
-  platform: mqtt
+  unique_id: master_bedroom_sensor_battery
   name: Master Bedroom Sensor Battery
-  unit_of_measurement: '%'
-  device_class: battery
-  state_topic: smartthings/Master Bedroom Sensor/battery
-- unique_id: thermostat_humidity
+- state_topic: smartthings/Thermostat/humidity
   platform: mqtt
+  unit_of_measurement: '%'
+  device_class: humidity
+  unique_id: thermostat_humidity
   name: Thermostat Humidity
+- state_topic: smartthings/Living Room Sensor/humidity
+  platform: mqtt
   unit_of_measurement: '%'
   device_class: humidity
-  state_topic: smartthings/Thermostat/humidity
-- unique_id: living_room_sensor_humidity
-  platform: mqtt
+  unique_id: living_room_sensor_humidity
   name: Living Room Humidity
+- state_topic: smartthings/Master Bedroom Sensor/humidity
+  platform: mqtt
   unit_of_measurement: '%'
   device_class: humidity
-  state_topic: smartthings/Living Room Sensor/humidity
-- unique_id: master_bedroom_sensor_humidity
-  platform: mqtt
+  unique_id: master_bedroom_sensor_humidity
   name: Master Bedroom Humidity
-  unit_of_measurement: '%'
-  device_class: humidity
-  state_topic: smartthings/Master Bedroom Sensor/humidity
-- unique_id: living_room_sensor_temperature
+- state_topic: smartthings/Living Room Sensor/temperature
   platform: mqtt
+  unit_of_measurement: "\xB0F"
+  device_class: temperature
+  unique_id: living_room_sensor_temperature
   name: Living Room Temperature
+- state_topic: smartthings/Master Bedroom Sensor/temperature
+  platform: mqtt
   unit_of_measurement: "\xB0F"
   device_class: temperature
-  state_topic: smartthings/Living Room Sensor/temperature
-- unique_id: master_bedroom_sensor_temperature
-  platform: mqtt
+  unique_id: master_bedroom_sensor_temperature
   name: Master Bedroom Temperature
-  unit_of_measurement: "\xB0F"
-  device_class: temperature
-  state_topic: smartthings/Master Bedroom Sensor/temperature
-- unique_id: living_room_sensor_illuminance
+- state_topic: smartthings/Living Room Sensor/illuminance
   platform: mqtt
+  unit_of_measurement: lm
+  device_class: illuminance
+  unique_id: living_room_sensor_illuminance
   name: Living Room Illuminance
-  unit_of_measurement: lm
-  device_class: illuminance
-  state_topic: smartthings/Living Room Sensor/illuminance
-- unique_id: master_bedroom_sensor_illuminance
+- state_topic: smartthings/Master Bedroom Sensor/illuminance
   platform: mqtt
-  name: Master Bedroom Illuminance
   unit_of_measurement: lm
   device_class: illuminance
-  state_topic: smartthings/Master Bedroom Sensor/illuminance
+  unique_id: master_bedroom_sensor_illuminance
+  name: Master Bedroom Illuminance
